# AoC2020

./: AoC.cabal  AoC2020.cabal  CHANGELOG.md  README.md  derivation.nix  hie.yaml  nixpkgs.nix  run  shell.nix
app/: Main.hs
benchmark/: Main.hs
src/: AoC.hs  AoC2020.hs  Day1.hs  Day11.hs  Day18.hs  Day2.hs  Day24.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day9.hs  Parsing.hs
src/AoC/: Parsing.hs  Util.hs
test/: Spec.hs
test-data/: 11a.txt  11b.txt  18a.txt  18b.txt  1a.txt  1b.txt  24a.txt  24b.txt  2a.txt  2b.txt  3a.txt  3b.txt  4a.txt  4b.txt  5a.txt  6a.txt  6b.txt  9a.txt  9b.txt
