cabal-version: 2.4
name: AoC2020
version: 0.0.0
license: MIT
license-file: LICENSE
copyright: 2020 Meck
maintainer: Johan@meck.se
author: Meck
synopsis: Solutions to advent of code 2020
description:
    Solutions to advent of code 2020
build-type: Simple
extra-doc-files: README.md
                 CHANGELOG.md

library
    exposed-modules:
        AoC2020
        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
        Day7
        Day8
        Day9
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
        Day23
        Day24
        Day25
    other-modules:
        Util
        Parsing
        Queue
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -Wincomplete-uni-patterns
                 -Wincomplete-record-updates -Wcompat -Widentities
                 -Wredundant-constraints -fhide-source-paths -Wmissing-export-lists
                 -Wpartial-fields
    build-depends:
        base,
        text,
        containers,
        split,
        mtl,
        vector,
        bytestring,
        megaparsec,
        parser-combinators,
        directory,
        http-client,
        http-client-tls,
        case-insensitive,
        gloss,
        deepseq,

executable AoC2020
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
                 -Widentities -Wredundant-constraints -fhide-source-paths
                 -Wmissing-export-lists -Wpartial-fields -threaded
    build-depends:
        base,
        AoC2020

test-suite AoC2020-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
                 -Widentities -Wredundant-constraints -fhide-source-paths
                 -Wmissing-export-lists -Wpartial-fields
    build-depends:
        base,
        tasty,
        tasty-hunit,
        text,
        AoC2020

benchmark AoC2020-benchmark
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: benchmark
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
                 -Widentities -Wredundant-constraints -fhide-source-paths
                 -Wmissing-export-lists -Wpartial-fields
    build-depends:
        base,
        gauge,
        AoC2020
